Add hero content

--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
 </head>
 <body>
   <header class="header">
-    <nav class="nav">
-      <p class="nav__logo">Nav Logo</p>
-      <ul class="nav__list">
-        <li class="nav__list__item">home</li>
-        <li class="nav__list__item">about</li>
-        <li class="nav__list__item">services</li>
-        <li class="nav__list__item">contact</li>
-      </ul>
-    </nav>
+    <div class="header--wrapper">
+      <nav class="nav">
+        <p class="nav__logo">Nav Logo</p>
+        <ul class="nav__list">
+          <li class="nav__list__item">home</li>
+          <li class="nav__list__item">about</li>
+          <li class="nav__list__item">services</li>
+          <li class="nav__list__item">contact</li>
+        </ul>
+      </nav>
+      <section class="hero">
+        <div class="hero__text">
+          <h1 class="hero__title">Seattle's premier auto detail</h1>
+          <p class="hero__subtext">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et repellendus quod soluta voluptatum molestiae fuga eveniet! Quaerat possimus accusantium illo obcaecati dignissimos repellendus adipisci a quis, provident officia, eos ab?</p>
+          <a class="hero__cta" href="#">Learn more</a>
+        </div>
+        <div class="hero__img">
+          <img src="/images/hero.jpg" alt="">
+        </div>
+      </section>
+    </div>
   </header>
 </body>
 </html>
