--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p class="nav__logo">Nav Logo</p>
         <ul class="nav__list">
           <li class="nav__list__item">home</li>
-          <li class="nav__list__item">about</li>
           <li class="nav__list__item">services</li>
+          <li class="nav__list__item">pricing</li>
           <li class="nav__list__item">contact</li>
         </ul>
       </nav>
@@ -30,5 +30,32 @@
       </section>
     </div>
   </header>
+  <main>
+    <section class="services">
+      <div class="services--wrapper">
+        <h2 class="services__title">Services</h2>
+        <div class="service--wrapper">
+          <div class="service">
+            <h4 class="service__title">Wash & wax</h4>
+            <p class="service__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quisquam quibusdam nemo, magni voluptatum earum.</p>
+          </div>
+          <div class="service">
+            <h4 class="service__title">Vacuum & shampoo</h4>
+            <p class="service__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos modi veritatis architecto aperiam molestias commodi?</p>
+          </div>
+          <div class="service">
+            <h4 class="service__title">Cut & polish</h4>
+            <p class="service__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente earum ratione minima fugit officia voluptates.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="pricing">
+  
+    </section>
+    <footer class="footer">
+      <p>Copyright &copy; Rumbawa Development 2024.</p>
+    </footer>
+  </main>
 </body>
 </html>
