Add cta content

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
     <section class="pricing">
   
     </section>
+    <section class="cta">
+      <div class="cta__card">
+        <p>Come get your car cleaned with us!</p>
+        <button>Sign Up</button>
+      </div>
+    </section>
     <footer class="footer">
       <p>Copyright &copy; Rumbawa Development 2024.</p>
     </footer>
