Add quote content and styles

--- a/index.html
+++ b/index.html
@@ -50,13 +50,63 @@
         </div>
       </div>
     </section>
+    <section class="quote">
+      <div class="quote--wrapper">
+        <p class="quote--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eos blanditiis illo, enim nobis soluta fugiat at minus saepe, mollitia maiores officia non repellendus tempora, ea recusandae commodi tempore perspiciatis.</p>
+        <p class="quote--author">Anonymous</p>
+      </div>
+    </section>
     <section class="pricing">
-  
+      <div class="pricing--wrapper">
+        <div class="price__card">
+          <h4 class="price__card__title">Interior</h4>
+          <p class="price__card__cost">$50</p>
+          <ul class="price__card__list">
+            <li>Vacuum</li>
+            <li>Wipe down</li>
+            <li>Windows</li>
+          </ul>
+        </div>
+        <div class="price__card">
+          <h4 class="price__card__title">Interior+</h4>
+          <p class="price__card__cost">$75</p>
+          <ul class="price__card__list">
+            <li>Vacuum</li>
+            <li>Wipe down</li>
+            <li>Windows</li>
+            <li>Seats cleaned</li>
+            <li>Steam</li>
+            <li>Trunk</li>
+          </ul>
+        </div>
+        <div class="price__card">
+          <h4 class="price__card__title">Exterior</h4>
+          <p class="price__card__cost">$50</p>
+          <ul class="price__card__list">
+            <li>Wash</li>
+            <li>Wheels</li>
+            <li>Wax</li>
+            <li>Tire dressing</li>
+          </ul>
+        </div>
+        <div class="price__card">
+          <h4 class="price__card__title">Exterior+</h4>
+          <p class="price__card__cost">$75</p>
+          <ul class="price__card__list">
+            <li>Wash</li>
+            <li>Wheels</li>
+            <li>Tire dressing</li>
+            <li>Decontaminate</li>
+            <li>Wax & sealant</li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
     </section>
     <section class="cta">
       <div class="cta__card">
         <p>Come get your car cleaned with us!</p>
-        <button>Sign Up</button>
+        <button class="">Sign Up</button>
       </div>
     </section>
     <footer class="footer">
