Update styles.css & index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Auto Detailing - Seattle</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300;1,500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -57,6 +60,7 @@
       </div>
     </section>
     <section class="pricing">
+      <h2 class="pricing__title">Pricing</h2>
       <div class="pricing--wrapper">
         <div class="price__card">
           <h4 class="price__card__title">Interior</h4>
