--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300;1,500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header class="header">
@@ -28,7 +28,7 @@
           <a class="hero__cta" href="#">Learn more</a>
         </div>
         <div class="hero__img">
-          <img src="/images/hero.jpg" alt="">
+          <img src="./images/hero.jpg" alt="">
         </div>
       </section>
     </div>
